<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="br.com.lvbfontes.piimobiliaria.Acesso.LoginActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/house_icon" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtSenha"
        android:inputType="textPassword" />

    <Button
        style="@style/btn"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin" />

    <Button
        style="@style/btn"
        android:id="@+id/btnRecuperarSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnRecuperarSenha"/>

   <Button
        style="@style/btn"
        android:id="@+id/btnCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCadastro"/>

    <Button
        style="@style/btn"
        android:id="@+id/btnIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIdioma"/>

</LinearLayout>
