<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="br.com.lvbfontes.piimobiliaria.IdiomasActivity">

    <TextView
        style="@style/CabecalhoFiltros"
        android:paddingTop="32dp"
        android:text="@string/txtTelaIdiomas"/>

    <Button
        style="@style/btn"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/btnPortugues"
        android:onClick="idiomaPT"/>

    <Button
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnIngles"
        android:onClick="idiomaEN"/>

    <Button
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnEspanhol"
        android:onClick="idiomaES"/>

    <Button
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFrances"
        android:onClick="idiomaFR"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="6dp"
            android:layout_marginBottom="6dp"
            android:onClick="voltar"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_done_black_24dp" />

    </RelativeLayout>

</LinearLayout>
