<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.lvbfontes.piimobiliaria.Admin.AdminDashboardActivity">

    <TextView
        android:text="Admin"
        android:gravity="center"
        android:textSize="30sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/btn"
        android:id="@+id/btnCadastroCorretores"
        android:text="@string/btnCadastroCorretores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/btn"
        android:id="@+id/btnCadastroImoveis"
        android:text="@string/btnCadastroImoveis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/btn"
        android:id="@+id/btnConsultaImoveis"
        android:text="@string/btnConsultaImoveis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        style="@style/btn"
        android:id="@+id/btnRelatorios"
        android:text="@string/btnRelatorios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
