<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="br.com.lvbfontes.piimobiliaria.Corretor.EditarImovelActivity">

    <ImageView
        android:id="@+id/editarImgImovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editarTipoImovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/spinnerEditarContrato"
        android:ems="10"
        android:inputType="textCapWords"
        android:hint="@string/hintTipoImovel" />

    <EditText
        android:id="@+id/editarComodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:hint="@string/hintComodos"
        android:layout_below="@+id/editarTipoImovel"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/editarValor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editarComodos"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hintPreco" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerEditarContrato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editarImgImovel" />

    <EditText
        android:id="@+id/editarArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editarValor"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/hintArea" />

    <Button
        style="@style/btn"
        android:id="@+id/btnSalvarEditarImovel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnSalvar" />

</RelativeLayout>
