<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.lvbfontes.piimobiliaria.Admin.CadastroCorretorActivity">

    <TextView
        android:text="@string/txtCadastroCorretores"
        android:gravity="center"
        android:textSize="26sp"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!--EditText
        android:id="@+id/edtNome"
        android:hint="@string/hintNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /!-->

    <!--EditText
        android:id="@+id/edtSobrenome"
        android:hint="@string/hintSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" /!-->

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtEmail"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtSenha"
        android:hint="@string/edtSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnRealizarCadastro"
        style="@style/btn"
        android:text="@string/btnRealizarCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
