<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.com.lvbfontes.piimobiliaria.FinalizaCadastroActivity">

    <ImageButton
        android:contentDescription="@string/contentImgFinalizaCadastro"
        android:id="@+id/imgButtonProfilePic"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/ic_add_a_photo_white_24dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgButtonProfilePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:hint="@string/hintNome" />

    <EditText
        android:id="@+id/edtSobrenome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:maxLines="1"
        android:inputType="textCapWords"
        android:hint="@string/hintSobrenome"/>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinnerFinalizaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/edtSobrenome"/>

    <Button
        style="@style/btn"
        android:id="@+id/btnFinalizaCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/btnFinalizaCadastro" />

</RelativeLayout>
