<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.com.lvbfontes.piimobiliaria.Corretor.VisualizarImovelActivity">

    <ImageView
        android:id="@+id/imgVisualizarImovel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:srcCompat="@mipmap/add_btn" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/fieldTipoImovel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fieldTipoImovel"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVisualizarTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tipo Aqui" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fieldComodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fieldComodos"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVisualizarComodos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Comodos aqui" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/fieldPreco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fieldPreco"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txtVisualizarValor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Valor aqui" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fieldContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fieldContrato"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVisualizarContrato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contrato aqui" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fieldArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/fieldArea"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtVisualizarArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Área aqui" />

    </LinearLayout>


</LinearLayout>
